# body-detection

./: README.md  face_mesh.py  pyproject.toml
haarcascade_code/: eye_detection.py  face_detection.py  smile_detection.py
mediapipe_code/: body_mesh.py  body_mesh_darkbg.py  face_mesh.py  face_mesh_darkbg.py  hand_mesh.py  hand_mesh_darkbg.py
