[tool.poetry]
name = "body-detection"
version = "0.1.0"
description = ""
authors = ["Cândido <candido101209@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
